# sponge

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: CMakeLists.txt  InitAllTranslations.h
include/sponge/: CMakeLists.txt  sponge.h  sponge.td  spongeBase.td  spongeTypes.td
include/sponge/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/sponge/Transforms/utils/: aff.h
lib/: CMakeLists.txt
lib/sponge/: CMakeLists.txt  sponge.cpp
lib/sponge/Transforms/: CMakeLists.txt  PassDetail.h  PassesImplementation.cpp
lib/sponge/Transforms/utils/: CMakeLists.txt  aff.cpp
tools/: CMakeLists.txt
tools/sponge-opt/: CMakeLists.txt  sponge-opt.cpp
tools/sponge-translate/: CMakeLists.txt  sponge-translate.cpp
